<resources>
    <string name="app_name">Plasmahero</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_login">Login</string>
    <string name="prompt_name">Nama</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="action_register">Daftar</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Email tidak valid</string>
    <string name="invalid_password">Passwod harus lebih dari 5 karakter</string>
    <string name="invalid_confirm_password">Konfirmasi Password harus sama</string>
    <string name="login_failed">"Login gagal"</string>
    <string name="register_failed">Registrasi gagal</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_faq">FAQ</string>
    <string name="title_udd">UDD</string>
    <string name="title_event">Event</string>
    <string name="title_donor_form">Form donor</string>
    <string name="title_recipient_form">Form pencari donor</string>
    <string name="headline_option_role">Pilih peran kamu!</string>
    <string name="title_option_role">Pilih Peran</string>
    <string name="text_is_registered">Belum memiliki akun?</string>
    <string name="text_role_fragment">Pilih peran yang kamu!</string>
    <string name="text_fill_donor_data_title">Isi data donor kamu!</string>
    <string name="text_poster_title">Poster pencarian plasma kamu!</string>
    <string name="text_fill_recipinet_data_title">Isi data pasien!</string>
    <string name="title_donor_history_fragment">Riwayat donor kamu</string>
    <string name="form_age_label">Umur</string>
    <string name="form_address_label">Alamat</string>
    <string name="form_udd_label">Tempat donor darah</string>
    <string name="form_hospital_name_label">Rumah Sakit</string>
    <string name="form_hospital_city_label">Kota Rumah Sakit</string>
    <string name="form_hospital_letter_label">Upload surat dari rumah sakit</string>
    <string name="form_city_label">Kota</string>
    <string name="form_phone_label">Nomor Telepon</string>
    <string name="form_gender_label">Jenis Kelamin</string>
    <string name="form_blood_type_label">Golongan Darah</string>
    <string name="form_blood_rhesus_label">Rhesus Darah</string>
    <string name="form_weight_label">Berat</string>
    <string name="form_negative_date_label">Tanggal dinyatakan negatif</string>
    <string name="form_negative_evidence">Upload bukti negatif</string>
    <string name="form_positive_evidence">Upload bukti positif</string>
    <string name="text_upload_file">Upload File</string>
    <string name="text_upload">Upload</string>
    <string name="button_save">Simpan</string>
    <string name="text_file_picked">Ubah file</string>
    <string name="text_donor_role">Pendonor</string>
    <string name="text_recipient_role">Pencari Donor</string>
    <string name="button_logout">Logout</string>
    <string name="button_share">Bagikan</string>
    <string name="dummy_profile_name">Bob Marley</string>
    <string name="dummy_profile_role">Pendonor</string>
    <string name="text_donor_total">Total donor</string>
    <string name="text_last_donor">Donor terakhir</string>
    <string name="text_donor_back">Donor kembali</string>
    <string name="dummy_donor_total">0 kali</string>
    <string name="dummy_none">-</string>
    <string name="text_upload_donor_evidence">Upload bukti donor</string>
    <string name="text_history">Riwayat Donor</string>
    <string name="text_recipient_poster">Poster Plasma</string>
    <string name="text_about_plasma">Tentang Plasma</string>
    <string name="title_about_plasma">Tentang Plasma Konvalesen</string>
    <string name="about_plasma_subtitle">Merupakan salah satu metode imunisasi pasif, yang dilakukan dengan memberikan plasma orang yang telah sembuh dari COVID-19, kepada pasien COVID-19 yang sedang dirawat. Terapi Plasma Konvalesen merupakan terapi tambahan yang masih dalam proses penelitian di Indonesia.</string>
    <string name="text_donor_condition">Syarat Donor</string>
    <string name="text_donor_plot">Alur Donor</string>
    <string name="text_get_donor_plot">Alur Dapat Plasma (Stok Tersedia)</string>
    <string name="text_get_donor_plot_no_available">Alur Dapat Plasma (Stok Kosong)</string>
    <string name="text_dummy">Dummy text</string>
    <string name="text_verified">(verified)</string>
    <string name="text_unverified">(unverified)</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>