<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/ivLoginLogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_plasmahero_logo"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/large_margin"
        android:selectAllOnFocus="true"
        android:layout_below="@id/ivLoginLogo"/>

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:layout_marginTop="@dimen/default_margin"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_below="@id/etLoginUsername"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/action_sign_in"
        android:enabled="false"
        android:background="@color/design_default_color_on_primary"
        android:layout_below="@id/etLoginPassword"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tvIsRegisterQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_is_registered"
            android:textSize="18dp"
            android:layout_marginRight="@dimen/small_margin"/>


        <Button
            android:id="@+id/btnToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:textColor="@color/black"
            android:background="@color/material_on_background_disabled"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etRegisterPassword"
        app:layout_constraintStart_toStartOf="@+id/etRegisterPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</RelativeLayout>