<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:layout_margin="@dimen/fragment_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/rlProfileInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="@dimen/profile_icon_size"
            android:layout_height="@dimen/profile_icon_size"
            app:srcCompat="@drawable/donor_mascot"/>

        <LinearLayout
            android:id="@+id/llProfileName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_icon_size"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_alignBaseline="@+id/ivProfileImage"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="@dimen/default_margin">

            <TextView
                android:id="@+id/tvProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_profile_name"
                android:textSize="@dimen/text_form_label"/>

            <TextView
                android:id="@+id/tvProfileType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_profile_role"
                android:textStyle="bold"
                android:textSize="@dimen/text_form"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDonorInfo"
            android:layout_below="@+id/llProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_donor_total"/>

                <TextView
                    android:id="@+id/tvProfileDonorTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_donor_total"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_last_donor"/>

                <TextView
                    android:id="@+id/tvProfileDonorLast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_none"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_donor_back"/>

                <TextView
                    android:id="@+id/tvProfileDonorAgain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_none"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btnProfileAddHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_upload_donor_evidence"
        android:backgroundTint="@color/yellow"
        android:layout_marginTop="@dimen/large_margin"
        android:paddingHorizontal="@dimen/button_padding"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvHomeDonorHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/yellow_soft">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_option_role_image"
                    android:src="@drawable/donor_mascot"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_history"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_profile_card"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvHomeAboutPlasma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/small_margin"
            app:cardBackgroundColor="@color/yellow_soft">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_option_role_image"
                    android:src="@drawable/donor_mascot"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_about_plasma"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_profile_card"/>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_logout"
        android:layout_marginTop="@dimen/large_margin"
        android:backgroundTint="@color/black"
        android:paddingHorizontal="@dimen/button_padding"
        android:layout_gravity="center"
        android:textColor="@color/white"/>

</LinearLayout>