<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.iwan.plasmahero_mobile.ui.login.LoginFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.iwan.plasmahero_mobile.ui.register.RegisterFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_register_to_navigation_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_navigation_register_to_navigation_role_option"
            app:destination="@id/navigation_role_option" />
    </fragment>

    <fragment
        android:id="@+id/navigation_donor_form"
        android:name="com.iwan.plasmahero_mobile.ui.home.DonorFormFragment"
        android:label="@string/title_donor_form"
        tools:layout="@layout/fragment_donor_form">
    </fragment>

    <fragment
        android:id="@+id/navigation_recipient_form"
        android:name="com.iwan.plasmahero_mobile.ui.home.RecipientFormFragment"
        android:label="@string/title_recipient_form"
        tools:layout="@layout/fragment_recipient_form">
    </fragment>

    <fragment
        android:id="@+id/navigation_role_option"
        android:name="com.iwan.plasmahero_mobile.ui.home.RoleOptionFragment"
        android:label="@string/title_option_role"
        tools:layout="@layout/fragment_role_option">
        <action
            android:id="@+id/action_navigation_role_option_to_navigation_recipient_form"
            app:destination="@id/navigation_recipient_form" />
        <action
            android:id="@+id/action_navigation_role_option_to_navigation_donor_form"
            app:destination="@id/navigation_donor_form" />
    </fragment>

</navigation>