<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.register.RegisterFragment">

    <ImageView
        android:id="@+id/ivLoginLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_plasmahero_logo"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/etRegsiterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:inputType="text"
        android:hint="@string/prompt_name"
        android:background="@color/yellow_soft"
        android:padding="@dimen/form_padding_large"
        android:layout_below="@id/ivLoginLogo"/>

    <EditText
        android:id="@+id/etRegisterUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/small_margin"
        android:selectAllOnFocus="true"
        android:background="@color/yellow_soft"
        android:padding="@dimen/form_padding_large"
        android:layout_below="@id/etRegsiterName"/>

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:background="@color/yellow_soft"
        android:padding="@dimen/form_padding_large"
        android:layout_below="@id/etRegisterUsername"/>

    <EditText
        android:id="@+id/etRegisterConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:background="@color/yellow_soft"
        android:padding="@dimen/form_padding_large"
        android:layout_below="@id/etRegisterPassword"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:enabled="false"
        android:text="@string/action_register"
        android:layout_below="@id/etRegisterConfirmPassword"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etRegisterPassword"
        app:layout_constraintStart_toStartOf="@+id/etRegisterPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</RelativeLayout>